[package]
name = "rocket-file-cache"
version = "0.12.0"
authors = ["Henry Zimmerman <zimhen7@gmail.com>"]
exclude = [
]

description = "An in-memory file cache for the Rocket web framework."
readme = "README.md"

homepage = "https://github.com/hgzimmerman/rocket-file-cache"
repository = "https://github.com/hgzimmerman/rocket-file-cache"
documentation = "https://docs.rs/crate/rocket-file-cache"

license-file = "LICENSE"

[dependencies]
rocket = "0.4.10"
log = "0.4.14"
concurrent-hashmap = "0.2.2"

[dev-dependencies]
tempdir = "0.3.7"
rand = "0.8.4"